# dyndns-rust

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.toml.example
docs/: antigravity_implementation_plan.md  architecture.md  requirements.md  setup.md
scripts/: build.sh  install.sh
src/: main.rs
